Url and views configuration

--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,5 +1,9 @@
 {% extends 'main.html' %} {% block content %}
 <h1>{{ project.title }}</h1>
 
+{% for tag in tags %}
+<span>{{tag}}</span>
+{% endfor %}
+
 <p>{{ project.description }}</p>
 {% endblock content %}
