--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -12,8 +12,7 @@
   <tbody>
     {% for project in projects %}
     <tr>
-      <td>{{ project.id }}</td>
-      <td>{{ project.title }}</td>
+      <td><a href="{% url 'project' project.id %}"</a>{{ project.title }}</td>
       <td>{{ project.description }}</td>
     </tr>
     {% endfor %}
