--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -14,6 +14,7 @@
     <tr>
       <td><a href="{% url 'project' project.id %}"</a>{{ project.title }}</td>
       <td>{{ project.description }}</td>
+      <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
     </tr>
     {% endfor %}
   </tbody>
