--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <h2>Logo</h2>
 
 <a href="/">Home</a>
-<a href="/project/2">Projects</a>
+<a href="{% url 'create-project' %}">Add Project</a>
 <hr />
